samples/_failures_safe/1761401942_0fb462_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_72c21cdf.c: In function ‘main’:
./samples/SAFE/__tmp_72c21cdf.c:159:17: error: expected ‘;’ at end of input
  159 |         return 0
      |                 ^
      |                 ;
./samples/SAFE/__tmp_72c21cdf.c:159:9: error: expected declaration or statement at end of input
  159 |         return 0
      |         ^~~~~~
./samples/SAFE/__tmp_72c21cdf.c:159:9: error: expected declaration or statement at end of input
